--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,5 +16,5 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
-syn = { version = "1.0.107", features = ["derive"] }
+syn = { version = "1.0.107", features = ["derive", "extra-traits"] }
 quote = "1.0"
